[project]
name = "pangloss"
version = "0.1.0"
description = "Modelling, REST API and database bindings for Graph databases"

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.pytest.ini_options]
testpaths = ["packages"]
asyncio_mode = "auto"


[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
